<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChangeImageRGB</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="beauty_girl">beauty girl</string>
    <string name="red">R:</string>
    <string name="rgb">A:</string>
    <string name="blue">B:</string>
    <string name="green">G:</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="save_fail_">save fail!</string>
    <string name="restore_success_">restore success!</string>
    <string name="backup_success_">backup success!</string>
    <string name="save_success_">save success!</string>

</resources>